--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -161,6 +161,11 @@
     <Compile Include="Contexts\Financial\OtherCashActivities\FindOtherCashActivityContext.cs" />
     <Compile Include="Contexts\Financial\OtherCashActivities\ListOtherCashActivityContext.cs" />
     <Compile Include="Contexts\Financial\OtherCashActivities\UpdateOtherCashActivityContext.cs" />
+    <Compile Include="Contexts\Financial\Wallets\CreateWalletContext.cs" />
+    <Compile Include="Contexts\Financial\Wallets\DeleteWalletContext.cs" />
+    <Compile Include="Contexts\Financial\Wallets\FindWalletContext.cs" />
+    <Compile Include="Contexts\Financial\Wallets\ListWalletsContext.cs" />
+    <Compile Include="Contexts\Financial\Wallets\UpdateWalletContext.cs" />
     <Compile Include="Contexts\Manage\Stores\CreateStoreContext.cs" />
     <Compile Include="Contexts\Manage\Stores\DeleteStoreContext.cs" />
     <Compile Include="Contexts\Manage\Stores\DeleteStoreWithFixedExpensesContext.cs" />
@@ -184,6 +189,7 @@
     <Compile Include="Controllers\Commercial\SaleOrdersControllerTest.cs" />
     <Compile Include="Controllers\Financial\FixedExpensesControllerTest.cs" />
     <Compile Include="Controllers\Financial\OtherCashActivitiesControllerTest.cs" />
+    <Compile Include="Controllers\Financial\WalletsControllerTest.cs" />
     <Compile Include="Controllers\Manage\StoresControllerTest.cs" />
     <Compile Include="Controllers\Commercial\CustomersControllerTest.cs" />
     <Compile Include="Factories\Account\PasswordRecoveryFactory.cs" />
@@ -196,6 +202,7 @@
     <Compile Include="Factories\Commercial\SaleOrderFactory.cs" />
     <Compile Include="Factories\Financial\FixedExpenseFactory.cs" />
     <Compile Include="Factories\Financial\OtherCashActivityFactory.cs" />
+    <Compile Include="Factories\Financial\WalletFactory.cs" />
     <Compile Include="Factories\Manage\StoreFactory.cs" />
     <Compile Include="Factories\Manage\TeamFactory.cs" />
     <Compile Include="Factories\Manage\TeamMemberFactory.cs" />
