--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -146,6 +146,9 @@
     <Compile Include="Contexts\Commercial\SaleCustomer\FindSaleCustomerContext.cs" />
     <Compile Include="Contexts\Commercial\SaleCustomer\UpdateCustomerToConfirmedSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleCustomer\UpdateSaleCustomerContext.cs" />
+    <Compile Include="Contexts\Commercial\SaleItems\ListSaleItemsContext.cs" />
+    <Compile Include="Contexts\Commercial\SaleItems\UpdateItemsOfConfirmedSaleOrderContext.cs" />
+    <Compile Include="Contexts\Commercial\SaleItems\UpdateSaleItemsContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\CreateSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\DeleteConfirmedSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\DeleteSaleOrderContext.cs" />
@@ -190,6 +193,7 @@
     <Compile Include="Controllers\Catalog\ServicesControllerTest.cs" />
     <Compile Include="Controllers\Commercial\PaymentMethodsControllerTest.cs" />
     <Compile Include="Controllers\Commercial\SaleCustomerControllerTest.cs" />
+    <Compile Include="Controllers\Commercial\SaleItemsControllerTest.cs" />
     <Compile Include="Controllers\Commercial\SaleOrdersControllerTest.cs" />
     <Compile Include="Controllers\Financial\FixedExpensesControllerTest.cs" />
     <Compile Include="Controllers\Financial\OtherCashActivitiesControllerTest.cs" />
@@ -204,6 +208,8 @@
     <Compile Include="Factories\Catalog\ServicePriceFactory.cs" />
     <Compile Include="Factories\Commercial\PaymentMethodFactory.cs" />
     <Compile Include="Factories\Commercial\SaleOrderFactory.cs" />
+    <Compile Include="Factories\Commercial\SaleProductFactory.cs" />
+    <Compile Include="Factories\Commercial\SaleServiceFactory.cs" />
     <Compile Include="Factories\Financial\FixedExpenseFactory.cs" />
     <Compile Include="Factories\Financial\OtherCashActivityFactory.cs" />
     <Compile Include="Factories\Financial\WalletFactory.cs" />
