--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -168,6 +168,9 @@
     <EmbeddedResource Include="Data\Migrations\201704281902537_CreateSaleItems.resx">
       <DependentUpon>201704281902537_CreateSaleItems.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201704291820329_CreateSalePayment.resx">
+      <DependentUpon>201704291820329_CreateSalePayment.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Infrastructure\Mail\LocalMail.html" />
     <EmbeddedResource Include="Infrastructure\Logging\LocalLog.html" />
     <Content Include="Scripts\controllers\account\dashboard\account-overview.controller.js" />
@@ -199,6 +202,8 @@
     <Content Include="Scripts\controllers\commercial\sale-orders\sale-order-details.controller.js" />
     <Content Include="Scripts\controllers\commercial\sale-orders\sale-order-edit.controller.js" />
     <Content Include="Scripts\controllers\commercial\sale-orders\sale-order-list.controller.js" />
+    <Content Include="Scripts\controllers\commercial\sale-payments\sale-payments-details.controller.js" />
+    <Content Include="Scripts\controllers\commercial\sale-payments\sale-payments-edit.controller.js" />
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-details.controller.js" />
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-edit.controller.js" />
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-list.controller.js" />
@@ -228,8 +233,9 @@
     <Content Include="Scripts\services\commercial\payment-method-fee.service.js" />
     <Content Include="Scripts\services\commercial\payment-method.service.js" />
     <Content Include="Scripts\services\commercial\sale-customer.service.js" />
-    <Content Include="Scripts\services\commercial\sale-item.service.js" />
+    <Content Include="Scripts\services\commercial\sale-items.service.js" />
     <Content Include="Scripts\services\commercial\sale-order.service.js" />
+    <Content Include="Scripts\services\commercial\sale-payments.service.js" />
     <Content Include="Scripts\services\financial\fixed-expense.service.js" />
     <Content Include="Scripts\services\financial\other-cash-activites.service.js" />
     <Content Include="Scripts\services\financial\wallet.service.js" />
@@ -252,6 +258,7 @@
     <Compile Include="Controllers\Commercial\SaleCustomerController.cs" />
     <Compile Include="Controllers\Commercial\SaleItemsController.cs" />
     <Compile Include="Controllers\Commercial\SaleOrdersController.cs" />
+    <Compile Include="Controllers\Commercial\SalePaymentsController.cs" />
     <Compile Include="Controllers\Financial\FixedExpensesController.cs" />
     <Compile Include="Controllers\Financial\OtherCashActivitiesController.cs" />
     <Compile Include="Controllers\Financial\WalletsController.cs" />
@@ -332,6 +339,10 @@
     <Compile Include="Data\Migrations\201704281902537_CreateSaleItems.Designer.cs">
       <DependentUpon>201704281902537_CreateSaleItems.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201704291820329_CreateSalePayment.cs" />
+    <Compile Include="Data\Migrations\201704291820329_CreateSalePayment.Designer.cs">
+      <DependentUpon>201704291820329_CreateSalePayment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Extensions\EnumarableExtensions.cs" />
     <Compile Include="Extensions\HttpContextBaseExtension.cs" />
@@ -388,6 +399,9 @@
     <Compile Include="Models\EntityModel\Commercial\SaleOrders\SaleOrder.cs" />
     <Compile Include="Models\EntityModel\Commercial\SaleOrders\SaleOrderMapping.cs" />
     <Compile Include="Models\EntityModel\Commercial\SaleOrders\SaleOrderQuery.cs" />
+    <Compile Include="Models\EntityModel\Commercial\SalePayments\SalePayment.cs" />
+    <Compile Include="Models\EntityModel\Commercial\SalePayments\SalePaymentMapping.cs" />
+    <Compile Include="Models\EntityModel\Commercial\SalePayments\SalePaymentQuery.cs" />
     <Compile Include="Models\EntityModel\Commercial\SaleProducts\SaleProduct.cs" />
     <Compile Include="Models\EntityModel\Commercial\SaleProducts\SaleProductMapping.cs" />
     <Compile Include="Models\EntityModel\Commercial\SaleProducts\SaleProductQuery.cs" />
@@ -440,6 +454,7 @@
     <Compile Include="Infrastructure\Security\Sha256Hash.cs" />
     <Compile Include="Infrastructure\Security\UserIdentity.cs" />
     <Compile Include="Models\ServiceModel\Catalog\PricingTable.cs" />
+    <Compile Include="Models\ServiceModel\Commercial\CashRegister.cs" />
     <Compile Include="Models\ServiceModel\Commercial\ShoppingCart.cs" />
     <Compile Include="Models\ServiceModel\Financial\Billing.cs" />
     <Compile Include="Models\ServiceModel\Financial\CashFlowAnalysis.cs" />
@@ -477,6 +492,8 @@
     <Compile Include="Models\ViewModel\Commercial\SaleOrders\ListSaleOrdersViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\SaleOrders\SaleOrderIdViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\SaleOrders\UpdateSaleOrderViewModel.cs" />
+    <Compile Include="Models\ViewModel\Commercial\SalePayments\SalePaymentViewModel.cs" />
+    <Compile Include="Models\ViewModel\Commercial\SalePayments\UpdateSalePaymentsViewModel.cs" />
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\CreateFixedExpenseViewModel.cs" />
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\FixedExpenseIdViewModel.cs" />
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\ListFixedExpensesViewModel.cs" />
@@ -519,6 +536,7 @@
     <Compile Include="Results\Commercial\SaleOrders\SaleOrderIdJson.cs" />
     <Compile Include="Results\Commercial\SaleOrders\SaleOrderJson.cs" />
     <Compile Include="Results\Commercial\SaleOrders\SaleOrderListJson.cs" />
+    <Compile Include="Results\Commercial\SalePayments\SalePaymentListJson.cs" />
     <Compile Include="Results\Common\AccessDeniedStatusCode.cs" />
     <Compile Include="Results\Common\ModelErrorsJson.cs" />
     <Compile Include="Results\Common\NotFoundStatusCode.cs" />
@@ -614,6 +632,9 @@
     <Content Include="Views\Commercial\SaleItems\SaleItemsDetails.cshtml" />
     <Content Include="Views\Commercial\SaleItems\SaleItemsEdit.cshtml" />
     <Content Include="Views\Commercial\SaleItems\_RemoveItem.cshtml" />
+    <Content Include="Views\Commercial\SalePayments\SalePaymentsDetails.cshtml" />
+    <Content Include="Views\Commercial\SalePayments\SalePaymentsEdit.cshtml" />
+    <Content Include="Views\Commercial\SalePayments\_RemovePayment.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
