--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -171,6 +171,9 @@
     <EmbeddedResource Include="Data\Migrations\201704291820329_CreateSalePayment.resx">
       <DependentUpon>201704291820329_CreateSalePayment.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201705012339023_CreateSaleIncome.resx">
+      <DependentUpon>201705012339023_CreateSaleIncome.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Infrastructure\Mail\LocalMail.html" />
     <EmbeddedResource Include="Infrastructure\Logging\LocalLog.html" />
     <Content Include="Scripts\controllers\account\dashboard\account-overview.controller.js" />
@@ -259,6 +262,7 @@
     <Compile Include="Controllers\Commercial\SaleItemsController.cs" />
     <Compile Include="Controllers\Commercial\SaleOrdersController.cs" />
     <Compile Include="Controllers\Commercial\SalePaymentsController.cs" />
+    <Compile Include="Controllers\Financial\SaleOrderBillingController.cs" />
     <Compile Include="Controllers\Financial\FixedExpensesController.cs" />
     <Compile Include="Controllers\Financial\OtherCashActivitiesController.cs" />
     <Compile Include="Controllers\Financial\WalletsController.cs" />
@@ -343,6 +347,10 @@
     <Compile Include="Data\Migrations\201704291820329_CreateSalePayment.Designer.cs">
       <DependentUpon>201704291820329_CreateSalePayment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201705012339023_CreateSaleIncome.cs" />
+    <Compile Include="Data\Migrations\201705012339023_CreateSaleIncome.Designer.cs">
+      <DependentUpon>201705012339023_CreateSaleIncome.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Extensions\EnumarableExtensions.cs" />
     <Compile Include="Extensions\HttpContextBaseExtension.cs" />
@@ -413,6 +421,9 @@
     <Compile Include="Models\EntityModel\Financial\FixedExpenses\FixedExpense.cs" />
     <Compile Include="Models\EntityModel\Financial\FixedExpenses\FixedExpenseMapping.cs" />
     <Compile Include="Models\EntityModel\Financial\FixedExpenses\FixedExpenseQuery.cs" />
+    <Compile Include="Models\EntityModel\Financial\SaleIncomes\SaleIncome.cs" />
+    <Compile Include="Models\EntityModel\Financial\SaleIncomes\SaleIncomeMapping.cs" />
+    <Compile Include="Models\EntityModel\Financial\SaleIncomes\SaleIncomeQuery.cs" />
     <Compile Include="Models\EntityModel\Financial\Money.cs" />
     <Compile Include="Models\EntityModel\Financial\OtherCashActivities\OtherCashActivity.cs" />
     <Compile Include="Models\EntityModel\Financial\OtherCashActivities\OtherCashActivityMapping.cs" />
@@ -635,6 +646,8 @@
     <Content Include="Views\Commercial\SalePayments\SalePaymentsDetails.cshtml" />
     <Content Include="Views\Commercial\SalePayments\SalePaymentsEdit.cshtml" />
     <Content Include="Views\Commercial\SalePayments\_RemovePayment.cshtml" />
+    <Content Include="Views\Commercial\SaleOrders\_ConfirmSaleOrder.cshtml" />
+    <Content Include="Views\Commercial\SaleOrders\_RevertSaleOrder.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
