Set wallet when create a new sale order

--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Contexts\Financial\OtherCashActivities\UpdateOtherCashActivityContext.cs" />
     <Compile Include="Contexts\Financial\Wallets\CreateWalletContext.cs" />
     <Compile Include="Contexts\Financial\Wallets\DeleteWalletContext.cs" />
+    <Compile Include="Contexts\Financial\Wallets\DeleteWalletWithSaleOrdersContext.cs" />
     <Compile Include="Contexts\Financial\Wallets\FindWalletContext.cs" />
     <Compile Include="Contexts\Financial\Wallets\ListWalletsContext.cs" />
     <Compile Include="Contexts\Financial\Wallets\UpdateWalletContext.cs" />
