--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -207,6 +207,8 @@
     <Content Include="Scripts\controllers\commercial\sale-orders\sale-order-list.controller.js" />
     <Content Include="Scripts\controllers\commercial\sale-payments\sale-payments-details.controller.js" />
     <Content Include="Scripts\controllers\commercial\sale-payments\sale-payments-edit.controller.js" />
+    <Content Include="Scripts\controllers\financial\cash-flow\daily-cash-flow.controller.js" />
+    <Content Include="Scripts\controllers\financial\cash-flow\monthly-cash-flow.controller.js" />
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-details.controller.js" />
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-edit.controller.js" />
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-list.controller.js" />
@@ -239,6 +241,7 @@
     <Content Include="Scripts\services\commercial\sale-items.service.js" />
     <Content Include="Scripts\services\commercial\sale-order.service.js" />
     <Content Include="Scripts\services\commercial\sale-payments.service.js" />
+    <Content Include="Scripts\services\financial\cash-flow.service.js" />
     <Content Include="Scripts\services\financial\fixed-expense.service.js" />
     <Content Include="Scripts\services\financial\other-cash-activites.service.js" />
     <Content Include="Scripts\services\financial\wallet.service.js" />
@@ -262,6 +265,7 @@
     <Compile Include="Controllers\Commercial\SaleItemsController.cs" />
     <Compile Include="Controllers\Commercial\SaleOrdersController.cs" />
     <Compile Include="Controllers\Commercial\SalePaymentsController.cs" />
+    <Compile Include="Controllers\Financial\CashFlowController.cs" />
     <Compile Include="Controllers\Financial\SaleOrderBillingController.cs" />
     <Compile Include="Controllers\Financial\FixedExpensesController.cs" />
     <Compile Include="Controllers\Financial\OtherCashActivitiesController.cs" />
@@ -505,6 +509,8 @@
     <Compile Include="Models\ViewModel\Commercial\SaleOrders\UpdateSaleOrderViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\SalePayments\SalePaymentViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\SalePayments\UpdateSalePaymentsViewModel.cs" />
+    <Compile Include="Models\ViewModel\Financial\CashFlow\DailyCashFlowViewModel.cs" />
+    <Compile Include="Models\ViewModel\Financial\CashFlow\MonthlyCashFlowViewModel.cs" />
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\CreateFixedExpenseViewModel.cs" />
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\FixedExpenseIdViewModel.cs" />
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\ListFixedExpensesViewModel.cs" />
@@ -555,6 +561,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Results\Common\SuccessStatusCode.cs" />
     <Compile Include="Results\Common\UnauthorizedStatusCode.cs" />
+    <Compile Include="Results\Financial\CashFlow\DailyCashFlowListJson.cs" />
+    <Compile Include="Results\Financial\CashFlow\MonthlyCashFlowListJson.cs" />
     <Compile Include="Results\Financial\FixedExpenses\FixedExpenseJson.cs" />
     <Compile Include="Results\Financial\FixedExpenses\FixedExpenseListJson.cs" />
     <Compile Include="Results\Financial\OtherCashActivities\OtherCashActivityJson.cs" />
@@ -648,6 +656,8 @@
     <Content Include="Views\Commercial\SalePayments\_RemovePayment.cshtml" />
     <Content Include="Views\Commercial\SaleOrders\_ConfirmSaleOrder.cshtml" />
     <Content Include="Views\Commercial\SaleOrders\_RevertSaleOrder.cshtml" />
+    <Content Include="Views\Financial\CashFlow\DailyCashFlow.cshtml" />
+    <Content Include="Views\Financial\CashFlow\MonthlyCashFlow.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
